[package]
name = "BaseBuster"
version = "1.86.0"

[profile.release]
debug = true

[features]
verification = []
serde = ["dep:serde"]
alloy = ["dep:alloy"]
revm = ["dep:revm"]
revm-inspectors = ["dep:revm-inspectors"]
revm-database = ["dep:revm-database"]
reqwest = ["dep:reqwest"]
reth = ["dep:reth"]
reth-db = ["dep:reth-db"]
reth-chainspec = ["dep:reth-chainspec"]
reth-node-ethereum = ["dep:reth-node-ethereum"]
reth-provider = ["dep:reth-provider"]
reth-primitives = ["dep:reth-primitives"]
pool-sync = ["dep:pool-sync"]
uniswap_v3_math = ["dep:uniswap_v3_math"]
petgraph = ["dep:petgraph"]
alloy-primitives = ["dep:alloy-primitives"]
alloy-network = ["dep:alloy-network"]
alloy-consensus = ["dep:alloy-consensus"]
rayon = ["dep:rayon"]
eyre = ["dep:eyre"]
uniswap-v3-sdk = ["dep:uniswap-v3-sdk"]
alloy-eips = ["dep:alloy-eips"]
env_logger = ["dep:env_logger"]
lazy_static = ["dep:lazy_static"]
blockstate = ["dep:blockstate"]
block-db = ["dep:block-db"]
lazy_static = ["dep:lazy_static"]
log = ["dep:log"]
serde_json = ["dep:serde_json"]
rustc-hash = ["dep:rustc-hash"]
zerocopy = ["dep:zerocopy"]
http-body-util = ["dep:http-body-util"]
bytes = ["dep:bytes"]

[dependencies]
anyhow = "1.0.79"
eyre = {version = "0.6.12", optional = true}
log = {version = "0.4.21", optional = true}
env_logger = {version = "0.11.3", optional = true}
lazy_static = {version = "1.4.0", optional = true}
block-db = {version = "0.2.0", optional = true}
blockstate = {version = "0.1.0", optional = true}
winit = {version ="0.30.9", optional = true}
tokio = {version = "1.44.2", features = ["full"]}
futures = {version = "0.3.31", features = ["executor"]}
reqwest = {version = "0.12.3", optional = true, features = ["json", "gzip", "blocking", "stream"]}
hyper = {version = "1.3.0", features = ["client"] }
hyper-tls = {version = "0.6.0", features = ["alpn"] }
hyper-util = {version = "0.1.11", features = ["client", "client-legacy", "http1", "http2"]}
http-body-util = {version = "0.1.1", optional = true}
bytes = {version = "1.6.0", optional = true}
serde = {version = "1.0.197", optional = true, features = ["derive"]}
serde_json = {version = "1.0.114", optional = true}
sha2 = "0.10.8"
rustc-hash = {version = "2.1.1", optional = true}
uniswap_v3_math = {version = "0.6.0", optional = true}
uniswap-v3-sdk = {version = "4.3.0", optional = true}
chrono = "0.4.38"
alloy = {version = "0.14.0", optional = true, features = ["full"]}
alloy-consensus = {version = "0.14.0", optional = true}
alloy-eips = {version = "0.14.0", optional = true}
alloy-primitives = {version = "1.0.0", optional = true}
alloy-network = {version = "0.14.0", optional = true}
enr = "0.13.0"
zerocopy = {version = "0.8.25-alpha.3", optional = true}
revm = {version = "22.0.1", optional = true, features = ["alloydb"]}
revm-inspectors = { version = "0.19.1", optional = true}
revm-database = { version = "3.0.0", optional = true}
reth = {git = "https://github.com/paradigmxyz/reth", optional = true, rev = "6f8e725"}
reth-db = {git = "https://github.com/paradigmxyz/reth", optional = true, package = "reth-db", rev = "6f8e725"}
reth-chainspec = {git = "https://github.com/paradigmxyz/reth", optional = true, package = "reth-chainspec", rev = "6f8e725"}
reth-node-ethereum = {git = "https://github.com/paradigmxyz/reth", optional = true, package = "reth-node-ethereum", rev = "6f8e725"}
reth-provider = {git = "https://github.com/paradigmxyz/reth", optional = true}
reth-primitives = {git = "https://github.com/paradigmxyz/reth", optional = true}
rayon = {version = "1.10.0", optional = true}
petgraph = {version = "0.8.1", optional = true}
dashmap = "6.1.0"
foldhash = "0.1.3"
dotenv = "0.15.0"
pool-sync = {git = "https://github.com/Zacholme7/PoolSync", optional = true}
essential-node-db-sql = "0.5.0"
