[package]
name = "Template"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Template"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
tokio = { version = "1.36", features = ["macros", "signal", "rt-multi-thread", "sync"] }
eyre = "0.6.12"
log = "0.4.21"
env_logger = "0.11.3"
clang = "2.0.0"
proptest = "1.4.0"
clang-sys = "1.8.1"
criterion = "0.5"
lazy_static = "1.4.0"
block-db = "0.2.0"
blockstate = "0.1.0"
libproc = "0.14.10"
winit = "0.30.9"
futures = { version = "0.3.31", features = ["executor"] }
reqwest = { version = "0.12.3", features = ["json", "gzip", "blocking", "stream"] }
hyper = { version = "1.3.0", features = ["client"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.11", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1.1"
bytes = "1.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
once_cell = "1.21.3"
sha2 = "0.10.8"
rustc-hash = "2.1.1"
uniswap_v3_math = "0.6.0"
uniswap-v3-sdk = "4.3.0"
chrono = "0.4.38"

# Alloy (Ethereum Types, EIPs, Primitives, etc.)
alloy = { version = "0.14.0", features = ["full"] }
alloy-eip5792 = "0.15.6"
alloy-eip7547 = "0.15.6"
alloy-hardforks = "0.2.0"
alloy-genesis = "0.15.6"
alloy-node-bindings = "0.15.6"
alloy-sol-types = "1.0.0"
alloy-rpc-client = "0.15.6"
alloy-rpc-types = "0.15.6"
alloy-rpc-trace-types = "0.0.0-reserved"
alloy-primitives = "1.0.0"
alloy-rpc-types-engine = "0.15.6"
alloy-sol-macro = "1.0.0"
alloy-sol-macro-input = "1.0.0"
alloy-json-abi = "1.0.0"
alloy-json-rpc = "0.15.6"
alloy-chains = "0.2.0"
alloy-rpc-types-mev = "0.15.6"
alloy-rpc-types-eth = "0.15.6"
alloy-rpc-types-trace = "0.15.6"
alloy-signer-local = "0.15.6"
alloy-rpc-types-any = "0.15.6"
alloy-rpc-types-debug = "0.15.6"
alloy-rpc-types-txpool = "0.15.6"
alloy-signer = "0.1.0"
alloy-core = "1.0.0"
alloy-sol-type-parser = "1.0.0"
alloy-transport = "0.15.6"
syn-solidity = "1.0.0"
alloy-sol-macro-expander = "1.0.0"
alloy-pubsub = "0.15.6"
alloy-compat = "0.2.0"
alloy-abi = "0.1.0"
alloy-signer-wallet = "0.0.0-reserved"
alloy-rlp = "0.3.11"
alloy_serde_macro = "0.1.2"
alloy-contract = "0.15.6"
alloy-evm = "0.6.0"
alloy-network-primitives = "0.15.6"
alloy-rlp-derive = "0.3.11"
alloy-u256-literal = "0.1.0"
enr = "0.13.0"
zerocopy = "0.8.25-alpha.3"
# Macro, Logging, Error handling
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_derive = "1.0.197"
thiserror = "1.0.50"

# Alloy additional crates (sol-types + http transports)
alloy-transport-http = { version = "0.4.2", features = ["reqwest"] }
alloy-transport-ws = "0.15.6"
alloy-transport-ipc = "0.15.6"

# REVM + Precompile Logic
revm = "22.0.1"
revm-context = "3.0.1"
revm-context-interface = "3.0.0"
revm-inspector = "3.0.1"
revm-statetest-types = "3.0.1"
revm-bytecode = "3.0.0"
revm-specification = "1.0.0-alpha.1"
revme = "4.0.2"
revm-state = "3.0.0"
revm-database = "3.0.0"
revm-database-interface = "3.0.0"

# Reth Crates
reth = { git = "https://github.com/paradigmxyz/reth", package = "reth", rev = "6f8e725" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "6f8e725" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum", rev = "6f8e725" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec", rev = "6f8e725" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "6f8e725" }

# Other utilities
rayon = "1.0.0"
petgraph = "0.8.1"
dashmap = "6.1.0"
foldhash = "0.1.3"
dotenv = "0.15.0"
procmac = "0.1.0"
proc-macro-crate = "3.3.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.67"
proc-macro-error-attr = "1.0.4"
proc-macro-error-attr2 = "2.0.0"
# External project used
pool-sync = { git = "https://github.com/Zacholme7/PoolSync" }

# Optional DB support (can remove if unused)
essential-node-db-sql = "0.5.0"
