[package]
name = "Template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Template"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
eyre = "0.6.12"
log = "0.4.21"
env_logger = "0.11.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
once_cell = "1.21.3"
lazy_static = "1.4.0"
rayon = "1.10.0"
dashmap = "6.1.0"
petgraph = "0.8.1"
rustc-hash = "2.1.1"
reqwest = { version = "0.12.3", features = ["json", "gzip", "blocking", "stream"] }
hyper = { version = "1.3.0", features = ["client"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.11", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1.1"
bytes = "1.6.0"
chrono = "0.4.38"
futures = { version = "0.3.31", features = ["executor"] }
tokio = { version = "1.36", features = ["macros", "signal", "rt-multi-thread", "sync"] }

# Alloy (Ethereum types, primitives, sol-types, transport)
alloy = { version = "0.14.0", features = ["full"] }
alloy-primitives = { version = "1.0.0", features = ["std"], default-features = false }
alloy-sol-types = { version = "0.4.2", features = ["std"] }
alloy-transport-http = { version = "0.4.2", features = ["reqwest"] }
alloy-signer = "0.1.0"

# REVM (EVM simulation)
revm = { version = "22.0.1", features = ["alloydb"] }
revm-inspectors = "0.19.1"

# Reth Core Crates (from git)
reth = { git = "https://github.com/paradigmxyz/reth", package = "reth", rev = "6f8e725" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "6f8e725" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum", rev = "6f8e725" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec", rev = "6f8e725" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "6f8e725" }

# PoolSync
pool-sync = { git = "https://github.com/Zacholme7/PoolSync" }

# Math Utils
uniswap_v3_math = "0.6.0"
uniswap-v3-sdk = "4.3.0"

# Others
foldhash = "0.1.3"
dotenv = "0.15.0"
