[package]
name = "Template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Template"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
eyre = {version = "0.6.12", optional = true}
log = {version = "0.4.21", optional = true}
env_logger = "0.11.3"
clang = "2.0.0"
clang-sys = "1.8.1"
lazy_static = {version = "1.4.0", optional = true}
block-db = {version = "0.2.0", optional = true}
blockstate = {version = "0.1.0", optional = true}
winit = {version ="0.30.9", optional = true}
tokio = {version = "1.44.2", features = ["full"]}
futures = {version = "0.3.31", features = ["executor"]}
reqwest = {version = "0.12.3", optional = true, features = ["json", "gzip", "blocking", "stream"]}
hyper = {version = "1.3.0", features = ["client"] }
hyper-tls = {version = "0.6.0", features = ["alpn"] }
hyper-util = {version = "0.1.11", features = ["client", "client-legacy", "http1", "http2"]}
http-body-util = {version = "0.1.1", optional = true}
bytes = {version = "1.6.0", optional = true}
serde = {version = "1.0.197", optional = true, features = ["derive"]}
serde_json = "1.0.114"
once_cell = {version = "1.21.3", optional = true}
sha2 = "0.10.8"
rustc-hash = {version = "2.1.1", optional = true}
uniswap_v3_math = "0.6.0"
uniswap-v3-sdk = {version = "4.3.0", optional = true}
chrono = "0.4.38"
alloy = {version = "0.14.0", optional = true, features = ["full"]}
alloy-consensus = {version = "0.14.0", optional = true}
alloy-eips = {version = "0.14.0", optional = true}
alloy-primitives = {version = "1.0.0", optional = true}
alloy-network = {version = "0.14.0", optional = true}
enr = "0.13.0"
zerocopy = {version = "0.8.25-alpha.3", optional = true}
revm = {version = "22.0.1", optional = true, features = ["alloydb"]}
revm-inspectors = { version = "0.19.1", optional = true}
revm-database = { version = "3.0.0", optional = true}
reth = { git = "https://github.com/paradigmxyz/reth", package = "reth", rev = "6f8e725" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "6f8e725" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum", rev = "6f8e725" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec", rev = "6f8e725" }
reth-api = { git = "https://github.com/paradigmxyz/reth", rev = "6f8e725" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "6f8e725" }
reth-utils = { git = "https://github.com/paradigmxyz/reth", package = "reth-utils", rev = "6f8e725" }
rayon = {version = "1.10.0", optional = true}
petgraph = {version = "0.8.1", optional = true}
dashmap = "6.1.0"
foldhash = "0.1.3"
dotenv = "0.15.0"
pool-sync = {git = "https://github.com/Zacholme7/PoolSync", optional = true}
essential-node-db-sql = "0.5.0"
